[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/environment.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/Suisei.aseprite" type="SpriteFrames" id=2]
[ext_resource path="res://Assets/Sprites/frame/cctvframe.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/environmentdoors.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/environmentpanel.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/Gura.aseprite" type="SpriteFrames" id=6]
[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/GuraCrewmate.aseprite" type="SpriteFrames" id=7]
[ext_resource path="res://Scripts/MicroGames/GuraCrewmate.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprites/minigame/SuiseiAmongUs/SuiseiImpostor.aseprite" type="SpriteFrames" id=9]
[ext_resource path="res://Scripts/MicroGames/SuiseiImpostor.gd" type="Script" id=10]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 412, 524, 412, 296, 648, 296, 648, 528, 868, 528, 868, 560, 92, 560, 92, 524 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 3, 4, 5, 6 ), PoolIntArray( 0, 3, 6, 7 ) ]
outlines = [ PoolVector2Array( 412, 296, 648, 296, 648, 528, 868, 528, 868, 560, 92, 560, 92, 524, 412, 524 ) ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 13.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.5, 17.5 )

[sub_resource type="Animation" id=1]
resource_name = "Lose"
tracks/0/type = "value"
tracks/0/path = NodePath("Door1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 412, 116 ), Vector2( 292, 116 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 528, 116 ), Vector2( 528, 116 ), Vector2( 648, 116 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Suisei:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gura:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 4, 5, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gura:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="SuiseiAmongUs" type="Node2D"]

[node name="BGPanel" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Door1" type="Sprite" parent="."]
position = Vector2( 412, 116 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 30, 45 )

[node name="Door2" type="Sprite" parent="."]
position = Vector2( 528, 116 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 29, 0, 30, 45 )

[node name="BG" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Floor"]
navpoly = SubResource( 4 )

[node name="GuraCrewmate" type="AnimatedSprite" parent="."]
position = Vector2( 584, 376 )
scale = Vector2( 4, 4 )
frames = ExtResource( 7 )
animation = "WalkLeft"
centered = false
offset = Vector2( -12, -27 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="GuraCrewmate"]
position = Vector2( 0, -13.5 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GuraCrewmate/Area2D"]
shape = SubResource( 3 )

[node name="SuiseiImpostor" type="AnimatedSprite" parent="."]
position = Vector2( 462, 436 )
scale = Vector2( 4, 4 )
frames = ExtResource( 9 )
centered = false
offset = Vector2( -10.5, -35 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="SuiseiImpostor"]
position = Vector2( 0, -17.5 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuiseiImpostor/Area2D"]
shape = SubResource( 5 )

[node name="Kill" type="Polygon2D" parent="."]
position = Vector2( 811, 508 )
scale = Vector2( 4, 4 )
color = Color( 0.701961, 0, 0, 1 )
polygon = PoolVector2Array( -11.75, -2.75, -8.25, -7, -3, -10, 4.25, -10.75, 10.75, -5.75, 12.75, 0.25, 10, 5.25, 5.25, 8.5, -1.75, 9.25, -12, 4 )

[node name="Suisei" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Gura" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
frames = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Lose = SubResource( 1 )
anims/Win = SubResource( 2 )

[node name="cctvframe" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="animation_finished" from="GuraCrewmate" to="GuraCrewmate" method="_on_GuraCrewmate_animation_finished"]
[connection signal="area_entered" from="SuiseiImpostor/Area2D" to="SuiseiImpostor" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="SuiseiImpostor/Area2D" to="SuiseiImpostor" method="_on_Area2D_area_exited"]
